<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/holo_blue_dark"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/text_view1"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/two" />

    <TextView
        android:id="@+id/text_view2"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@+id/text_view1"
        android:text="@string/one" />

    <TextView
        android:id="@+id/text_view3"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_toEndOf="@+id/text_view1"
        android:text="@string/three" />
</RelativeLayout>